--- a/src/style.css
+++ b/src/style.css
@@ -23,25 +23,13 @@ body {
     height: max-content;
 }
 
-.nav {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
 
 .title {
     color: #00cfff;
     font-size: 2.5em;
     font-weight: 900;
     text-decoration: underline;
-}
-
-.temp-switch {
-    color: #ccccdd;
-    font-size: 2rem;
-    align-self: flex-end;
-    display: flex;
-    gap: 18px;
+    align-self: center;
 }
 
 .main-content {
